--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
+		<dependency>
+    	<groupId>javax.validation</groupId>
+	    	<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+	    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		</dependency>
+		
+		
+		
 		
 	</dependencies>
 
