--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_course_db
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring_course_db
+spring.datasource.url=jdbc:mysql://spring-course-instance-db.cob3ftvzmjdt.us-east-2.rds.amazonaws.com:3306/spring_course
 spring.datasource.username=root
 spring.datasource.password=BancodeDados142!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jackson.default-property-inclusion=non-null
+spring.jackson.default-property-inclusion=non-null 
