prepare pom.xl for build

--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,12 @@
 	<packaging>war</packaging>
 	<name>spring-course</name>
 	<description>SPRING - RESTFul API</description>
+	
 	<properties>
 		<java.version>1.8</java.version>
+		<skipTests>true</skipTests>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
