--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring_course_db
-spring.datasource.url=jdbc:mysql://spring-course-instance-db.cob3ftvzmjdt.us-east-2.rds.amazonaws.com:3306/spring_course
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_course_db
+
+#spring.datasource.url=jdbc:mysql://spring-course-instance-db.cob3ftvzmjdt.us-east-2.rds.amazonaws.com:3306/spring_course
 spring.datasource.username=root
 spring.datasource.password=BancodeDados142!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jackson.default-property-inclusion=non-null 
